chapter9/spinnaker-alb-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "spin-gate"
  namespace: "spinnaker"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.http-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/inbound-cidrs: 192.2.0.10/32, 192.2.0.200/32
  labels:
    app: spin
    cluster: spin-gate
spec:
  rules:
    - host: "spinnaker-gate.eks.example.com"
      http:
        paths:
          - path: /*
            backend:
              serviceName: http-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: spin-deck
              servicePort: 9000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "spin-deck"
  namespace: "spinnaker"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.http-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/inbound-cidrs: 192.2.0.10/32, 192.2.0.200/32
  labels:
    app: spin
    cluster: spin-deck
spec:
  rules:
    - host: "spinnaker.eks.example.com"
      http:
        paths:
          - path: /*
            backend:
              serviceName: http-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: spin-deck
              servicePort: 9000
